--- a/css/style.css
+++ b/css/style.css
@@ -15,52 +15,44 @@ main{
 
 }
 
+
 .navbar li {
     margin: 0 20px;
 }
+.navbar li:hover{
+    background-color: #988bc5;
+    border-radius: 20px;
+}
 
-#box {
-    margin: 0px !important;
-    padding: 0px !important;
-    height: 450px;
+.footer{
+    background-color: #321E74;
+    color: white !important;
     font-family: 'Sen', sans-serif;
-    background-image: url("../assets/exemplos/backgroundimg.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.9;
-    
+    margin-top: 10%;
+    bottom: 0;
 
 }
-#box1{
-    /*background-color: yellow;*/
-    padding-top: 50px;
+.footer ul{
+    padding-top: 10px;
+}
+.footer p{
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-#info{
-    color: white;
-    padding: 10% 1% 5% 11%;
-    font-family: Georgia, serif;
-}
-#cimages{
-    padding: 4% 5% 5% 10%;
-}
-#botao{
-    padding-top: 5%;
-}
-.btn-circle{
-    border-radius: 30px;
-    width: 300px;
-    height: 50px;
-}
-.card-img-top{
-    padding: 20px;
+@media screen and (max-width: 655px) {
+    .navbar{
+        text-align: center !important;
+    }
+    .navbar li {
+        width: 100%;
+    }
+    .logo{
+        display: none !important;
+    }
+
 }
 
-
-#logo{
-    width: 120px;
-    height: 40px;
-}
 
 
 
