--- a/css/noticias.css
+++ b/css/noticias.css
@@ -5,6 +5,10 @@
     padding-top: 5%;
     margin-bottom: 5%;
 }
+.row h1{
+    font:40px'freight-sans-pro', Arial, Helvetica, sans-serif;
+    color: blueviolet;
+}
 .busca{
     padding: 5% 5% 0% 5%;
 
