--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ main{
 }
 
 .navbar {
-    background-color: #321E74 !important;
+    background-color: #7e4023 !important;
     font-family: 'Sen', sans-serif;
 
 }
