--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main{
 }
 
 .footer{
-    background-color: #321E74;
+    background-color: #7e4023 !important;
     color: white !important;
     font-family: 'Sen', sans-serif;
     margin-top: 10%;
